# Code

./: CMakeLists.txt  README.md  app.js  app.py  index.html  package.json  server.mjs  style.css  tsconfig.json
app/: page.js
app/api/devices/: route.js
app/api/devices/[id]/: route.js
app/api/selection/parse/: route.js
app/api/selection/rank/: route.js
app/api/selection/recommend/: route.js
app/api/selection/search/: route.js
assets/: theme.css  theme.js
components/: home-page.js  layout.js
config/: settings_schema.json
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  PRD.md  SCORING_MODEL.md  TODO.md  online-ide-design.md  system_design.md
docs/site/: index.html  modules.html  roadmap.html  styles.css  workspace.html
hardware/pio/: adc_capture.pio  dds_output.pio
include/: acquisition.h  control.h  generation.h  hw_config.h  system_init.h  ui_main.h
layout/: theme.liquid
lib/: selection-service.js
lib/data/: applications.js  applications.json  boards.js  boards.json  devices.js  devices.json
lib/parser/: selection-parser.js
lib/rules/: expert-rules.js
lib/scoring/: explain.js  filter.js  rank.js
public/: app.js  styles.css
scripts/: run-agent.sh  smoke-test.sh
sections/: homepage.liquid
src/: acquisition.c  control.c  generation.c  main.c  system_init.c  ui_main.c
static/css/: style.css
static/js/: editor.js
templates/: base.html  editor.html  index.html  index.json
tests/: selection.test.mjs
types/: domain.d.ts
